--- a/style.css
+++ b/style.css
@@ -1,8 +1,33 @@
+.menu{
+    background-color: rgb(54, 104, 211);
+    height: 50px;
+    width: 100%;
+    border-bottom: black 2px solid;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 1000;
+}
+.herf{
+    text-decoration: none;
+    color: black;
+}
 .tlo{
     height: auto;
 }
 .tyt{
     text-align: center;
+}
+.brdr{
+    overflow: hidden;
+    width: 40%;
+    float: left;
+}
+.zdj3{
+    width: 100%;
+    height: auto;
+    float: left;
+    margin-right: 15px;
+    margin-top: 12px;
 }
 .zdj1{
     width: 40%;
@@ -10,10 +35,9 @@
     float: left;
     margin-right: 15px;
     margin-top: 12px;
-    border: 2px black solid;
 }
 .pause{
-    height: 100px;
+    height: 0px;
 }
 .txt1{
     font-size: 30px;
@@ -23,11 +47,6 @@
     height: 400px;
     float: right;
 }
-.btn{
-    text-decoration: none;
-    border: none;
-    background-color: cornflowerblue;
-}
 .btn1{
     float: right;
 }
@@ -36,23 +55,18 @@
 }
 .anim1{
     transition: 2s;
-    border: 3px black solid;
-    overflow: hidden;
 }
 .anim1:hover{
     transform: scale(1.2);
     overflow: hidden;
 }
-.anim2{
-    transition: 2s;
-    border: 3px black solid;
-    overflow: hidden;
-}
-.anim2:hover{
-    transform: scale(0.5);
-}
 .tlo{
     animation-name: animacja;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+}
+.clr{
+    animation-name: animacja2;
     animation-duration: 5s;
     animation-iteration-count: infinite;
 }
@@ -63,3 +77,11 @@
     75% {background-color: rgb(212, 109, 204);}
     100% {background-color: rgb(0, 255, 42);}
 }
+@keyframes animacja2{
+    0% {color: rgb(0, 255, 42);}
+    25% {color: rgb(225, 236, 62);}
+    50% {color: rgb(8, 239, 255);}
+    75% {color: rgb(212, 109, 204);}
+    100% {color: rgb(0, 255, 42);}
+}
+
